--- a/docs/source/auto_examples/plot_data.ipynb
+++ b/docs/source/auto_examples/plot_data.ipynb
@@ -1,17 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -26,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "from surface_plot import plot_surface\nimport numpy as np\n\noutdir = 'data/simple_plot/test_figures'\nclobber = False\n\n# Load data\ndata_left = np.loadtxt('https://www.dropbox.com/s/lezvpw14iw13d9r/data_left.mean?dl=1', skiprows=1)\ndata_right = np.loadtxt('https://www.dropbox.com/s/lm3e6ykjm7rhdi5/data_right.mean?dl=1', skiprows=1)\n\ndata = {'left': data_left,\n        'right': data_right}\n\n# Plot mean data - automatic limits\noutput = f'{outdir}/simple_autolim.png'\nplot_surface.plot_surface(data, output, clobber=clobber)\n\n# Plot mean data - predetermined limits\noutput = f'{outdir}/simple_withlim.png'\nplot_surface.plot_surface(data, output, vlim=[0, 2.5], cbar_loc='bottom', clobber=clobber)\n\n# Plot mean data - predetermined limits with title\noutput = f'{outdir}/simple_withlim_title.png'\nplot_surface.plot_surface(data, output, vlim=[0.5, 3], cbar_loc='bottom', title='PiB uptake', cbar_title='Mean SUVR', clobber=clobber)"
+        "from surface_plot import plot_surface\nimport numpy as np\n\noutdir = 'data/simple_plot/test_figures'\nclobber = False\n\n# Load data\ndata_left = np.loadtxt('https://www.dropbox.com/s/lezvpw14iw13d9r/data_left.mean?dl=1', skiprows=1)\ndata_right = np.loadtxt('https://www.dropbox.com/s/lm3e6ykjm7rhdi5/data_right.mean?dl=1', skiprows=1)\n\ndata = {'left': data_left,\n        'right': data_right}\n\n# Plot mean data - automatic limits\noutput = f'{outdir}/simple_autolim.pdf'\nplot_surface.plot_surface(data, output, clobber=clobber)\n\n# Plot mean data - predetermined limits\noutput = f'{outdir}/simple_withlim.pdf'\nplot_surface.plot_surface(data, output, vlim=[0, 2.5], cbar_loc='bottom', clobber=clobber)\n\n# Plot mean data - predetermined limits with title\noutput = f'{outdir}/simple_withlim_title.pdf'\nplot_surface.plot_surface(data, output, vlim=[0.5, 3], cbar_loc='bottom', title='PiB uptake', cbar_title='Mean SUVR', clobber=clobber)"
       ]
     }
   ],
@@ -46,7 +35,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.10"
+      "version": "3.9.20"
     }
   },
   "nbformat": 4,
