--- a/docs/source/auto_examples/plot_statistic_2nd_threshold.ipynb
+++ b/docs/source/auto_examples/plot_statistic_2nd_threshold.ipynb
@@ -1,17 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -26,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "from surface_plot import plot_stats\nimport numpy as np\n\noutdir = 'data/second_level/test_figures'\nclobber = True\nmask = {'left': [], 'right': []}\n\n# Load data\ntval_left = np.loadtxt('https://www.dropbox.com/s/5ek63zf5l2iwd8f/tval_left.csv?dl=1')\ntval_right = np.loadtxt('https://www.dropbox.com/s/def320uevw5ivsb/tval_right.csv?dl=1')\nsecond_level_left = np.loadtxt('https://www.dropbox.com/s/y93z65g2jx0zs2x/second_level_left.csv?dl=1')\nsecond_level_right = np.loadtxt('https://www.dropbox.com/s/wgp0j0gp35oe41g/second_level_right.csv?dl=1')\n\ntval = {'left': tval_left,\n        'right': tval_right}\n\nsecond_level = {'left': second_level_left,\n                'right': second_level_right}\n\nt_lim = [-5, 5]\n\nmask['left'] = ~np.isnan(tval['left'])\nmask['right'] = ~np.isnan(tval['right'])\n\noutput = f'{outdir}/second_level.png'\n\nplot_stats.plot_tval(tval, output, mask=mask, t_lim=t_lim, second_threshold_mask=second_level, expand_edge=True, clobber=clobber)"
+        "from surface_plot import plot_stats\nimport numpy as np\n\noutdir = 'data/second_level/test_figures'\nclobber = True\nmask = {'left': [], 'right': []}\n\n# Load data\ntval_left = np.loadtxt('https://www.dropbox.com/s/5ek63zf5l2iwd8f/tval_left.csv?dl=1')\ntval_right = np.loadtxt('https://www.dropbox.com/s/def320uevw5ivsb/tval_right.csv?dl=1')\nsecond_level_left = np.loadtxt('https://www.dropbox.com/s/y93z65g2jx0zs2x/second_level_left.csv?dl=1')\nsecond_level_right = np.loadtxt('https://www.dropbox.com/s/wgp0j0gp35oe41g/second_level_right.csv?dl=1')\n\ntval = {'left': tval_left,\n        'right': tval_right}\n\nsecond_level = {'left': second_level_left,\n                'right': second_level_right}\n\nt_lim = [-5, 5]\n\nmask['left'] = ~np.isnan(tval['left'])\nmask['right'] = ~np.isnan(tval['right'])\n\noutput = f'{outdir}/second_level.pdf'\n\nplot_stats.plot_tval(tval, output, mask=mask, t_lim=t_lim, second_threshold_mask=second_level, expand_edge=True, clobber=clobber)"
       ]
     }
   ],
@@ -46,7 +35,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.10"
+      "version": "3.9.20"
     }
   },
   "nbformat": 4,
